[tool.poetry]
name = "trabajo-3"
version = "0.1.0"
description = "\"Implementación de algoritmos no supervisados\""
authors = ["eder3232 <eldebar.dk@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
